# kingspan-connect-sensor

./: .gitignore  .travis.yml  LICENSE  README.md  example.py  hacs.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.cspell/: custom-dictionary-workspace.txt
.github/: dependabot.yml
.github/workflows/: build-and-publish.yml  code-coverage.yml  run-all-tests.yml
connectsensor/: .tank.py.swp  __init__.py  _kingspan_export.py  _kingspan_status.py  client.py  debug.py  tank.py
custom_components/: __init__.py  config_flow.py  entity.py  manifest.json
custom_components/kingspan_connect/: manifest.json
custom_components/kingspan_connect/translations/: en.json
examples/: history_to_excel.py  tank_history.py  tank_notifier.py  tank_status.py
scripts/: kingspan-export.py  kingspan-notifier.py
src/connectsensor/: __init__.py  __init__.pyi  _kingspan_export.py  _kingspan_notifier.py  _kingspan_status.py  client.py  client.pyi  const.py  const.pyi  debug.py  exceptions.py  exceptions.pyi  tank.py  tank.pyi
src/connectsensor/connectsensor/: __init__.pyi  _kingspan_status.pyi  client.pyi  const.pyi  exceptions.pyi  tank.pyi
src/mitm/: mitmdumper.py  parse_headers.py
tests/: SoapMobileAPPGetCallHistory_v1.xml  SoapMobileAPPGetCallHistory_v1Result.xml  conftest.py  mock_data.py  mock_requests.py  test.py  test_async.py  test_export_script.py  test_notify_script.py  test_status_script.py  test_sync.py
tests/data/: Authenticate_v3_Async.invalid.json  Authenticate_v3_Async.valid.json  GetCallHistory_v1_Async.json  GetCallHistory_v1_Async.template.json  GetLatestLevel_v1_Async.json  SoapMobileAPPAuthenicate_v3.invalid.json  SoapMobileAPPAuthenicate_v3.invalid.xml  SoapMobileAPPAuthenicate_v3.valid.json  SoapMobileAPPAuthenicate_v3.valid.xml  SoapMobileAPPGetCallHistory_v1.json  SoapMobileAPPGetCallHistory_v1.template  SoapMobileAPPGetCallHistory_v1.template.json  SoapMobileAPPGetCallHistory_v1.template.xml  SoapMobileAPPGetCallHistory_v1.xml  SoapMobileAPPGetLatestLevel_v3.json  SoapMobileAPPGetLatestLevel_v3.xml  config.ini  connectsensor.wsdl  invalid_config.ini
